--- a/app/src/main/res/layout/list_record.xml
+++ b/app/src/main/res/layout/list_record.xml
@@ -10,8 +10,6 @@
         android:id="@+id/tvName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textSize="20sp"
@@ -22,9 +20,8 @@
 
     <TextView
         android:id="@+id/tvArtist"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:text="TextView"
         android:textSize="18sp"
         android:textStyle="normal|bold"
@@ -35,8 +32,6 @@
         android:id="@+id/tvSummary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
         android:text="TextView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
